SSE 가독성 좋게 리펙토링